lest finish the 56 tema

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="margin16dp">16dp</dimen>
+    <dimen name="margin19sp">19sp</dimen>
+    <dimen name="margin14sp">14sp</dimen>
 </resources>
